third day: new function for fitting model

--- a/ka-e-o-c.ipynb
+++ b/ka-e-o-c.ipynb
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5c289597",
    "metadata": {},
    "outputs": [
@@ -1464,8 +1464,10 @@
     "\n",
     "features = session_agg.columns\n",
     "\n",
-    "tr_data = lgb.Dataset(X_train[features], label=y_train)\n",
-    "model_lgbm_baseline = lgb.train({'eta': 0.05, 'objective': 'binary', 'max_leaves': 40}, tr_data, num_boost_round=500)\n"
+    "tr_data = lgb.Dataset(X_tr[features], label=X_tr.is_callcenter)\n",
+    "model_lgbm_baseline = lgb.train({'eta': 0.1, 'objective': 'binary'}, tr_data, num_boost_round=75)\n",
+    "\n",
+    "y_tst = model_lgbm_baseline.predict(X_tst[features]) "
    ]
   },
   {
